# lips

./: .gitignore  Cargo.toml  GEMINI.md  README.md
.cargo/: config.toml
crates/lips-app/: Cargo.toml
crates/lips-app/src/: main.rs
crates/lips-embedded/: Cargo.toml
crates/lips-embedded/src/: controls.rs  main.rs
crates/lips-lang/: Cargo.toml
crates/lips-lang-2/: Cargo.toml
crates/lips-lang-2/src/: arena.rs  arena2.rs  lib.rs
crates/lips-lang/src/: arena.rs  lexer.rs  lib.rs
crates/lips-repl/: Cargo.toml
crates/lips-repl/src/: main.rs
crates/lips-stm/: Cargo.toml  README.md
crates/lips-stm/src/: main.rs
