[package]
name = "lips-app"
version = "0.1.0"
edition = "2021"

[dependencies]
lips-lang = { path = "../lips-lang" }

microbit-v2 = "0.15.1"
cortex-m = { version = "0.7.3", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.0"
rtt-target = { version = "0.5.0" }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
nb = "1.0.0"
heapless = "0.8.0"
embedded-hal = "1.0.0"
embedded-io = "0.6.1"